--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=resumeimg.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="resumeimg.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>	Priyadharshini S</h1>
             <p>Web Developer</p>
         </div>
